Need to fix the border, padding or smth in the input, because there is too much space between the placeholder and dashed lines..

--- a/Login-Form/public/global.css
+++ b/Login-Form/public/global.css
@@ -6,7 +6,7 @@ html, body {
 
 body {
 	color: white;
-	background: black;
+	background: rgb(46, 46, 46);
 	margin: 0;
 	padding: 8px;
 	box-sizing: border-box;
